tooling/nargo_cli/tests/snapshots/execution_success/a_4_sub/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use std::ops::WrappingSub;

fn main(mut x: u32, y: u32, z: u32) {
    x = x.wrapping_sub(y);
    assert(x == z);
}
